--- a/responsive.css
+++ b/responsive.css
@@ -56,7 +56,6 @@
         padding-top: 40px;
     }
     .category{
-        flex-wrap: wrap;
-        flex-grow: 1;
+        min-width: 100%;
     }
 }
